<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">studymato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account_login">Already have an account? Sign in</string>
    <string name="dont_have_an_account_login">Don\'t have an account? Sign up</string>
    <string name="signUp">signUp</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="signIn">Sign In</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="dashboard">Dashboard</string>
    <string name="exams">Exams</string>
    <string name="settings">Settings</string>
    <string name="addNewItem">Add new item</string>
    <string name="add_new_exam">Add new exam</string>
    <string name="exam_name">Exam name</string>
    <string name="number_of_credits">Number of credits</string>
    <string name="due_date">Due date</string>
    <string name="confirm">Confirm</string>
    <string name="exams_to_do">Exams to do</string>

    <string name="channel_id">studymato_notifications</string>
    <string name="channel_name">studymato_notifications</string>
    <string name="channel_description">Notifications for studymato</string>

    <string name="onboarding_completed"><xliff:g id="onboarding_completed">oc</xliff:g></string>
    <string name="disable_notifications"><xliff:g id="disable_notifications">dn</xliff:g></string>
    <string name="study_duration"><xliff:g id="study_duration">20</xliff:g></string>
    <string name="break_duration"><xliff:g id="break_duration">5</xliff:g></string>
</resources>