<?xml version="1.0" encoding="utf-8"?>

<!-- Linear Layout with vertical orientation and other properties -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".authentication.SignInFragment">

    <!-- TextView for heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn" />

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />
    <!-- Button for register with text "Register" -->
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn" />

    <!-- ProgressBar for loading time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/tvRedirectLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/dont_have_an_account_login"
        android:textColor="#18206F"
        android:textSize="16sp" />
</LinearLayout>